# projekt_informatyka_2025_26

./: CMakeLists.txt  README.md  arkanoid  game.cpp  game.h  main.cpp  menu.cpp  menu.h  paletka.h  pilka.cpp  pilka.h  save.cpp  save.h  stone.cpp  stone.h
data/: save.txt
gamefiles/: game.cpp  game.h  gameover.cpp  gameover.h  main.cpp  menu.h  pilka.cpp  pilka.h  save.cpp  save.h  stone.cpp  stone.h
